// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox renders correctly with checked state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#C6C5BA",
          "borderRadius": 7,
          "borderWidth": 1,
          "display": "flex",
          "height": 25,
          "justifyContent": "center",
          "width": 25,
        },
        {
          "backgroundColor": "#ffe361",
        },
      ]
    }
  >
    <img
      alt="tick"
      src={
        {
          "testUri": "../../../src/components/KIcon/icons/tick.svg",
        }
      }
      style={
        {
          "height": 13,
          "width": 13,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "transparent",
        },
        {
          "width": 5,
        },
        undefined,
      ]
    }
  />
  <Text
    selectable={false}
  >
    Test Checkbox
  </Text>
</View>
`;

exports[`CheckBox renders correctly with unchecked state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#C6C5BA",
          "borderRadius": 7,
          "borderWidth": 1,
          "display": "flex",
          "height": 25,
          "justifyContent": "center",
          "width": 25,
        },
        {
          "backgroundColor": "transparent",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "transparent",
        },
        {
          "width": 5,
        },
        undefined,
      ]
    }
  />
  <Text
    selectable={false}
  >
    Test Checkbox
  </Text>
</View>
`;
